# ChangeLog for www-misc/mozilla-sync-server-core
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  04 Mar 2015; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  mozilla-sync-server-core-2.12.5.ebuild:
  Rename net-zope/zope-interface to dev-python/zope-interface.

  04 Mar 2015; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  mozilla-sync-server-core-2.12.5.ebuild:
  Rename net-zope/zope-deprecation to dev-python/zope-deprecation.

  23 Apr 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  mozilla-sync-server-core-2.12.5.ebuild:
  Fix patch path.

  23 Apr 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  mozilla-sync-server-core-2.12.5.ebuild,
  +files/mozilla-sync-server-core-2.12.5_wsgiproxy2.patch:
  Use dev-python/wsgiproxy2.

  27 Feb 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  mozilla-sync-server-core-2.12.5.ebuild:
  Drop PYTHON_MODNAME, it's not used in distutils-r1.

  06 Feb 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  mozilla-sync-server-core-2.12.5.ebuild:
  Correct PYTHON_MODNAME.

*mozilla-sync-server-core-2.12.5 (06 Feb 2013)

  06 Feb 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  +mozilla-sync-server-core-2.12.5.ebuild, +metadata.xml:
  Initial import. Ebuild by me.
